What's New in IDLE 1.2.2c1?
=========================

*Release date: XX-FEB-2008*

- Could not open files in .idlerc directory if latter was hidden on Windows.  
  Issue 1743, Issue 1862. (backport r60225, r60745)

- format_paragraph_event wasn't returning a 'break' (backport r59453)

- Corrected some bugs in AutoComplete.  Also, Page Up/Down in ACW implemented;                                                                               
  mouse and cursor selection in ACWindow implemented; double Tab inserts      
  current selection and closes ACW (similar to double-click and Return); scroll                                                                              
  wheel now works in ACW.  Added AutoComplete instructions to IDLE Help.
  (backport r53679)

- Avoid hang when encountering a duplicate in a completion list. Bug 1571112.
  (backport r53042)

- Some syntax errors were being caught by tokenize during the tabnanny        
  check, resulting in obscure error messages.  Do the syntax check            
  first.  Bug 1562716, 1562719  (backport r52083)

- Patch 1693258: Fix for duplicate "preferences" menu-OS X. (backport r56204)

- OSX: Avoid crash for those versions of Tcl/Tk which don't have a console

What's New in IDLE 1.2.1?
=========================

*Release date: 18-APR-2007*

What's New in IDLE 1.2.1c1?
===========================

*Release date: 05-APR-2007*

- Bug in idlelib.MultiCall: Options dialog was crashing IDLE if there was an
  option in config-extensions w/o a value. Patch #1672481, Tal Einat
  (backport from rev. 54156)

- Honor the "Cancel" action in the save dialog (Debian bug #299092).

- Bug #813342: Start the IDLE subprocess with -Qnew if the parent
  is started with that option. (backport from rev. 52295)

What's New in IDLE 1.2?
=======================

*Release date: 19-SEP-2006*

What's New in IDLE 1.2c2?
=========================

*Release date: 12-SEP-2006*

What's New in IDLE 1.2c1?
=========================
