@@ -3,6 +3,9 @@ What's New in IDLE 1.2.2c1?
 
 *Release date: XX-FEB-2008*
 
+- There was an error on exit if no sys.exitfunc was defined. Issue 1647.
+  (backport r60227)
+
 - Could not open files in .idlerc directory if latter was hidden on Windows.  
   Issue 1743, Issue 1862. (backport r60225, r60745)
 
